relatively minor updates to week 6 lecture slides & keys; added link to HW #3 + week 6 EOC

--- a/assignments.qmd
+++ b/assignments.qmd
@@ -14,7 +14,7 @@ Earning "Satisfactory" marks on Self-reflections (SRs) and Homework Assignments 
 | HW                      | [Homework Assignment #1](course-materials/assignments/HW1.qmd)                | Tue 01/07/2025 | Tue 01/21/2025      |
 | HW                      | [Homework Assignment #2](course-materials/assignments/HW2.qmd)                | Tue 01/21/2025 | Tue 02/04/2025      | 
 | SR                      | [Mid-course reflection (SR #2)](course-materials/assignments/SR2-midcourse.qmd)         | Mon 02/03/2025 | Sat 02/08/2025      |
-| HW                      | Homework Assignment #3                | Tue 02/11/2025 | Tue 02/25/2025      | 
+| HW                      | [Homework Assignment #3](course-materials/assignments/HW3.qmd)                   | Tue 02/11/2025 | Tue 02/25/2025      | 
 | HW                      | [Homework Assignment #4](course-materials/assignments/HW4.qmd)                | Tue 02/25/2025 | Tue 03/11/2025      | 
 | SR                      | End-of-course reflection (SR #3)      | Mon 03/10/2025 | Sat 03/15/2025      |
 | HW (final presentation) | [Homework Assignment #4](course-materials/assignments/HW4.qmd) (presentation) | Tue 02/25/2025           | Mon 03/17/2025 |
@@ -44,7 +44,7 @@ End-of-class surveys (EOCs) will become available at the end of each class (Mond
 | *No lecture or EOC (week 3)* | *NA*           | *NA*           |
 | [EOC (week 4)](https://forms.gle/nt5R8YBh8VHqdmpE8)                 | Mon 01/27/2025 | Mon 01/27/2025 |
 | [EOC (week 5)](https://forms.gle/McTeZ2LN4KLV9WeSA)                 | Mon 02/03/2025 | Mon 02/03/2025 |
-| EOC (week 6)                 | Mon 02/10/2025 | Mon 02/10/2025 |
+| [EOC (week 5)](https://forms.gle/McTeZ2LN4KLV9WeSA)                 | Mon 02/10/2025 | Mon 02/10/2025 |
 | *No lecture or EOC (week 7)* | *NA*           | *NA*           |
 | EOC (week 8)                 | Mon 02/24/2025 | Mon 02/24/2025 |
 | EOC (week 9)                 | Mon 03/03/2025 | Mon 03/03/2025 |
