--- a/course-materials/assignments/HW3.qmd
+++ b/course-materials/assignments/HW3.qmd
@@ -92,7 +92,7 @@ knitr::include_graphics("images/hand-drawn-plot.png")
   - [ ] create a presentable / aesthetically-pleasing theme (e.g. (re)move gridlines / legends as appropriate, adjust font sizes, etc.)
 
 - [ ] **7.** Answer the following questions:
-    - [ ] **a.** What challenges did you encounter or anticipate encountering as you continue to build / iterate on your visualizations in R?
+    - [ ] **a.** What challenges did you encounter or anticipate encountering as you continue to build / iterate on your visualizations in R? If you struggled with mocking up any of your three visualizations (from #6, above), describe those challenges here.
     - [ ] **b.** What ggplot extension tools / packages do you need to use to build your visualizations? Are there any that we haven't covered in class that you'll be learning how to use for your visualizations?
     - [ ] **c.** What feedback do you need from the instructional team and / or your peers to ensure that your intended message is clear?
 
@@ -133,6 +133,6 @@ format:
 
 - [ ] Ensure all code chunks have the correct options set so that **(a)** code *and* visualizations render, and **(b)** warnings and messages are suppressed (unless there is a reason to have them print). You should never print out entire data frames. *Please note that rendered documents that don't have appropriately specified chunk options will receive a "Not Yet" score.*
 - [ ] Code should be appropriately styled and annotated (please see [this resource](../../clean-code-guide.qmd){target="_blank"} on the course website), and your `.qmd` file should be easy to navigate.
-- [ ] When complete, **render** your `HW3-drafting-viz.qmd` file, **verify** that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. **Rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`), then **send** it to both Sloane and Sam on Slack via direct message by 11:59pm on Sat 02/22/2025.
+- [ ] When complete, **render** your `HW3-drafting-viz.qmd` file, **verify** that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. **Rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`), then **send** it to both Sam and Annie on Slack via direct message by 11:59pm on Sat 02/22/2025.
 
 
