--- a/course-materials/discussion/week5/week5-slides.qmd
+++ b/course-materials/discussion/week5/week5-slides.qmd
@@ -104,7 +104,7 @@ A non-exhaustive list of some familiar and some not-so-familiar chart types. Sou
 
 ## {#discussin data-menu-title="Discussion"}
 
-[Explore some cool new chart type!]{.slide-title}
+[Explore some cool new chart types!]{.slide-title}
 
 <hr>
 
