--- a/course-materials/keys/KEY-lecture6.1-typography.qmd
+++ b/course-materials/keys/KEY-lecture6.1-typography.qmd
@@ -58,6 +58,8 @@ Our "first draft" of this plot began in week 4 during our amounts / rankings lec
 #..........................load packages.........................
 library(tidyverse)
 library(showtext)
+library(glue)
+library(ggtext)
 
 #......................import Google fonts.......................
 # `name` is the name of the font as it appears in Google Fonts
