--- a/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
+++ b/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
@@ -1547,7 +1547,7 @@ There are a few options, all which replace `{ggplot2}`'s  `element_text()` -- be
 #| fig-align: "center"
 #| fig-asp: 0.7
 #| out-height: "100%"
-#| code-line-numbers: "23,27"
+#| code-line-numbers: "23,27,30-31"
 ggplot(subset_jobs) +
   geom_linerange(aes(y = occupation,
                      xmin = total_earnings_female, xmax = total_earnings_male)) + 
@@ -1671,7 +1671,7 @@ We already have the correct `theme()` elements added to our plot, but we do need
 ```{r}
 #| eval: true
 #| echo: true
-#| code-line-numbers: "7,9"
+#| code-line-numbers: "6,8"
 #........................create subtitle.........................
 money_icon <- "&#xf3d1"
 
