--- a/course-materials/week7.qmd
+++ b/course-materials/week7.qmd
@@ -99,7 +99,7 @@ The following tips were largely adapted from this [LinkedIn article](https://www
 
 | Assignment Type | Assignment Title       | Date Assigned  | Date Due                   |
 |-----------------|------------------------|----------------|----------------------------|
-| HW              | Homework Assignment #3 | Tue 02/11/2025 | Tue 02/25/2025, 11:59pm PT |
+| HW              | [Homework Assignment #3](assignments/HW3.qmd) | Tue 02/11/2025 | Tue 02/25/2025, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
 
 <!-- | Assignment Type | Assignment Title                                      | Date Assigned  | Date Due                    | -->
