--- a/course-materials/week8.qmd
+++ b/course-materials/week8.qmd
@@ -65,7 +65,7 @@ Find your assigned slide from the correct Google Slide deck (see table, under th
 | Assignment Type | Assignment Title       | Date Assigned  | Date Due                   |
 |-----------------|------------------------|----------------|----------------------------|
 | EOC             | EOC (week 8)           | Mon 02/24/2025 | Mon 02/24/2025, 11:55pm PT |
-| HW              | Homework Assignment #4 | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT |
+| HW              | [Homework Assignment #4](assignments/HW4.qmd) | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
 
 <!-- | Assignment Type | Assignment Title                                                       | Date Assigned  | Date Due  | -->
