--- a/course-materials/week10.qmd
+++ b/course-materials/week10.qmd
@@ -73,7 +73,7 @@ We'll use our last discussion section to give and receive feedback on final pres
 | Assignment Type | Assignment Title                 | Date Assigned  | Date Due                   |
 |-----------------|----------------------------------|----------------|----------------------------|
 | EOC             | EOC (week 10)                    | Mon 03/10/2025 | Mon 03/10/2025, 11:55pm PT |
-| HW              | Homework Assignment #4           | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT |
+| HW              | [Homework Assignment #4](assignments/HW4.qmd)           | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT |
 | SR              | End-of-course reflection (SR #3) | Mon 03/10/2025 | Sat 03/15/2025, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
 
