minor updates to week 6 text and code

--- a/course-materials/keys/KEY-lecture6.1-typography.qmd
+++ b/course-materials/keys/KEY-lecture6.1-typography.qmd
@@ -276,10 +276,10 @@ final_plot <- plot +
                                            halign = 1,
                                            lineheight = 1.5,
                                            margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(family = "josefin",
+                              face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, units = "cm"),
     axis.text = element_text(size = 9,
                              color = earnings_pal["light_text"]),
