--- a/course-materials/lecture-slides/lecture5.1-good-viz-slides.qmd
+++ b/course-materials/lecture-slides/lecture5.1-good-viz-slides.qmd
@@ -1233,7 +1233,7 @@ knitr::include_graphics("images/week5/parallel-plot.png")
 - **highlighting** the most important groups / values
 - **faceting** (small multiples)
 - creating **separate visualizations**
-- cohesive and intuitive **color scheme** (more on colors in the next lecture)
+- cohesive and intuitive **color scheme**
 
 <br>
 
