--- a/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
+++ b/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
@@ -544,7 +544,7 @@ Horror Movies, by [Cristophe Nicault](https://www.christophenicault.com/){target
 
 ```{r}
 countdown::countdown(
-  minutes = 2,
+  minutes = 1,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -577,7 +577,7 @@ HBCUs, by [Ijeamaka Anyene](https://ijeamaka-anyene.netlify.app/){target="_blank
 
 ```{r}
 countdown::countdown(
-  minutes = 2,
+  minutes = 1,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -610,7 +610,7 @@ R-Ladies Chapter Events, by [Nicola Rennie](https://ijeamaka-anyene.netlify.app/
 
 ```{r}
 countdown::countdown(
-  minutes = 2,
+  minutes = 1,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -1009,9 +1009,9 @@ ggplot(subset_jobs) +
     plot.caption = element_text(face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(size = 9,
                              color = earnings_pal["light_text"]),
@@ -1062,9 +1062,9 @@ ggplot(subset_jobs) +
     plot.caption = element_text(face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(size = 9,
                              color = earnings_pal["light_text"]),
@@ -1217,10 +1217,10 @@ ggplot(subset_jobs) +
                                 face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(family = "josefin",
+                              face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
@@ -1275,10 +1275,10 @@ plot <- ggplot(subset_jobs) +
                                 face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(family = "josefin",
+                              face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
@@ -1445,10 +1445,10 @@ ggplot(subset_jobs) +
                                 face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(family = "josefin",
+                              face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
@@ -1499,10 +1499,10 @@ ggplot(subset_jobs) +
                                 face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(family = "josefin",
+                              face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
@@ -1580,10 +1580,10 @@ ggplot(subset_jobs) +
                                            halign = 1, 
                                            lineheight = 1.5,
                                            margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(family = "josefin",
+                              face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
@@ -1640,10 +1640,10 @@ ggplot(subset_jobs) +
                                            halign = 1, 
                                            lineheight = 1.5,
                                            margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(family = "josefin",
+                              face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
@@ -1731,10 +1731,10 @@ ggplot(subset_jobs) +
                                            halign = 1, 
                                            lineheight = 1.5,
                                            margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(family = "josefin",
+                              face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
@@ -1818,10 +1818,10 @@ ggplot(subset_jobs) +
                                            halign = 1, 
                                            lineheight = 1.5,
                                            margin = margin(t = 15, r = 0, b = 0, l = 0)),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 10,
-                                hjust = 0),
+    strip.text = element_text(family = "josefin",
+                              face = "bold",
+                              size = 10,
+                              hjust = 0),
     panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
