updated link to EOC 6 on assingments page (was copied incorrectly)

--- a/assignments.qmd
+++ b/assignments.qmd
@@ -44,7 +44,7 @@ End-of-class surveys (EOCs) will become available at the end of each class (Mond
 | *No lecture or EOC (week 3)* | *NA*           | *NA*           |
 | [EOC (week 4)](https://forms.gle/nt5R8YBh8VHqdmpE8)                 | Mon 01/27/2025 | Mon 01/27/2025 |
 | [EOC (week 5)](https://forms.gle/McTeZ2LN4KLV9WeSA)                 | Mon 02/03/2025 | Mon 02/03/2025 |
-| [EOC (week 5)](https://forms.gle/McTeZ2LN4KLV9WeSA)                 | Mon 02/10/2025 | Mon 02/10/2025 |
+| [EOC (week 6)](https://forms.gle/kHYik4562kYQfSbR8)                 | Mon 02/10/2025 | Mon 02/10/2025 |
 | *No lecture or EOC (week 7)* | *NA*           | *NA*           |
 | EOC (week 8)                 | Mon 02/24/2025 | Mon 02/24/2025 |
 | EOC (week 9)                 | Mon 03/03/2025 | Mon 03/03/2025 |
