updated HW #3 submission guidelines under Rubric section

--- a/course-materials/assignments/HW3.qmd
+++ b/course-materials/assignments/HW3.qmd
@@ -100,12 +100,16 @@ knitr::include_graphics("images/hand-drawn-plot.png")
 
 You must complete the following, as detailed below, to receive a "Satisfactory" mark for Assignment #3:
 
-::: {.callout-important}
-## **Complete the following steps under your `lastName-eds240-HW4` repo, *not* in GitHub Classroom:**
-See details below.
+::: {.callout-note}
+## A few notes on expectations
+
+- Your plots don't have to be perfect but the message you want to convey should be clear
+- The more progress you make now, the more feedback we can provide ahead of HW #4
+- There are no strict length requirements for the free-response questions above, however we expect that you answer them thoughtfully and fully 
+- Low-effort responses and plots will result in a "Not Yet" mark
 :::
 
-- [ ] Complete all work in a file named, `HW3-drafting-viz.qmd` -- you are welcome to draft / practice things in different files / scripts, but you must have all required elements of the assignment available in *this* file for us to reference and grade.
+- [ ] Complete all work in a file named, `HW3-drafting-viz.qmd`, which lives in your `lastName-eds240-HW4` repository -- you are welcome to draft / practice things in different files / scripts, but you must have all required elements of the assignment available in *this* file for us to reference and grade.
 - [ ] Add any necessary YAML options (title, author, date, etc.). You must also include the following options:
 
 ```{r}
@@ -120,19 +124,24 @@ format:
 ---
 ```
 
-- [ ] Complete all exercises and answer all questions under the [Description section](HW3.qmd#description) above (use the check boxes to ensure you've completed all 7 required parts).
-
-::: {.callout-note}
-## A few notes on expectations
-
-- Your plots don't have to be perfect but the message you want to convey should be clear
-- The more progress you make now, the more feedback we can provide ahead of HW #4
-- There are no strict length requirements for the free-response questions above, however we expect that you answer them thoughtfully and fully 
-- Low-effort responses and plots will result in a "Not Yet" mark
-:::
-
 - [ ] Ensure all code chunks have the correct options set so that **(a)** code *and* visualizations render, and **(b)** warnings and messages are suppressed (unless there is a reason to have them print). You should never print out entire data frames. *Please note that rendered documents that don't have appropriately specified chunk options will receive a "Not Yet" score.*
 - [ ] Code should be appropriately styled and annotated (please see [this resource](../../clean-code-guide.qmd){target="_blank"} on the course website), and your `.qmd` file should be easy to navigate.
-- [ ] When complete, **render** your `HW3-drafting-viz.qmd` file, **verify** that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. **Rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`), then **send** it to both Sam and Annie on Slack via direct message by 11:59pm on Sat 02/22/2025.
+- [ ] Complete all exercises and answer all questions under the [Description section](HW3.qmd#description) above (use the check boxes to ensure you've completed all 7 required parts).
+- [ ] Submit both an HTML *and* PDF version of your HW #3 via Gradscope by 11:59pm on Tue 02/25/2025 following these instructions:
+    - [ ] **To submit your HTML file:** Render your `HW3-drafting-viz.qmd`, verify that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. Submit your HTML file to the Gradscope assignment titled, "Homework 3 - HTML"
+    - [ ] **To submit your PDF file:** Convert your HTML to PDF by either **(a)** `Cmd / Ctrl` + `P` to Print > Save as PDF (easiest option), or **(b)** rendering your `HW3-drafting-viz.qmd` file directly to PDF. Submit your PDF file to Gradescope assignment titled, "Homework 3 - PDF"
+        - [ ] ***IMPORTANT:** If you have folded code chunks, please be sure to unfold them before saving as a PDF (to ensure that all code is visible)*
+
+<!-- ::: {.callout-note} -->
+<!-- ## A few notes on expectations -->
+
+<!-- - Your plots don't have to be perfect but the message you want to convey should be clear -->
+<!-- - The more progress you make now, the more feedback we can provide ahead of HW #4 -->
+<!-- - There are no strict length requirements for the free-response questions above, however we expect that you answer them thoughtfully and fully  -->
+<!-- - Low-effort responses and plots will result in a "Not Yet" mark -->
+<!-- ::: -->
+
+
+<!-- - [ ] When complete, **render** your `HW3-drafting-viz.qmd` file, **verify** that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. **Rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`), then **send** it to both Sam and Annie on Slack via direct message by 11:59pm on Sat 02/22/2025. -->
 
 
