--- a/assignments.qmd
+++ b/assignments.qmd
@@ -46,7 +46,7 @@ End-of-class surveys (EOCs) will become available at the end of each class (Mond
 | [EOC (week 5)](https://forms.gle/McTeZ2LN4KLV9WeSA)                 | Mon 02/03/2025 | Mon 02/03/2025 |
 | [EOC (week 6)](https://forms.gle/kHYik4562kYQfSbR8)                 | Mon 02/10/2025 | Mon 02/10/2025 |
 | *No lecture or EOC (week 7)* | *NA*           | *NA*           |
-| EOC (week 8)                 | Mon 02/24/2025 | Mon 02/24/2025 |
+| [EOC (week 8)](https://forms.gle/Qvce8dggyWps19og6)                 | Mon 02/24/2025 | Mon 02/24/2025 |
 | EOC (week 9)                 | Mon 03/03/2025 | Mon 03/03/2025 |
 | EOC (week 10)                | Mon 03/10/2025 | Mon 03/10/2025 |
 
