--- a/course-materials/week8.qmd
+++ b/course-materials/week8.qmd
@@ -62,14 +62,14 @@ Find your assigned slide from the correct Google Slide deck (see table, under th
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
-| Assignment Type | Assignment Title       | Date Assigned  | Date Due                   |
-|-----------------|------------------------|----------------|----------------------------|
-| EOC             | EOC (week 8)           | Mon 02/24/2025 | Mon 02/24/2025, 11:55pm PT |
-| HW              | [Homework Assignment #4](assignments/HW4.qmd) | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT |
-: {.hover .bordered tbl-colwidths="[20,30,20,30]"}
-
-<!-- | Assignment Type | Assignment Title                                                       | Date Assigned  | Date Due  | -->
-<!-- |-----------------|-----------------------------------------------------|----------------|----------------------------| -->
-<!-- | EOC             | [EOC (week 8)](https://forms.gle/QcA6HyrHnbX11Kvv6) | Mon 02/24/2025 | Mon 02/24/2025, 11:55pm PT | -->
-<!-- | HW              | [Homework Assignment #4](assignments/HW4.qmd)       | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT | -->
+<!-- | Assignment Type | Assignment Title       | Date Assigned  | Date Due                   | -->
+<!-- |-----------------|------------------------|----------------|----------------------------| -->
+<!-- | EOC             | EOC (week 8)           | Mon 02/24/2025 | Mon 02/24/2025, 11:55pm PT | -->
+<!-- | HW              | [Homework Assignment #4](assignments/HW4.qmd) | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT | -->
 <!-- : {.hover .bordered tbl-colwidths="[20,30,20,30]"} -->
+
+| Assignment Type | Assignment Title                                                       | Date Assigned  | Date Due  |
+|-----------------|-----------------------------------------------------|----------------|----------------------------|
+| EOC             | [EOC (week 8)](https://forms.gle/QcA6HyrHnbX11Kvv6) | Mon 02/24/2025 | Mon 02/24/2025, 11:55pm PT |
+| HW              | [Homework Assignment #4](assignments/HW4.qmd)       | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT |
+: {.hover .bordered tbl-colwidths="[20,30,20,30]"}
