added key + additional resources from Allison's guest lecture

--- a/course-materials/week8.qmd
+++ b/course-materials/week8.qmd
@@ -32,14 +32,16 @@ There's no required prep for this week's lecture!
 <!-- [*^1^**vanilla** JavaScript is JavaScript code that is written without the aid of any external libraries or frameworks (comparable to using only base R without additional packages, e.g. like those in the `{tidyverse}`)*]{.body-text-s} -->
 
 
-### Observable Notebook
+### Observable Notebook(s)
 
-- [EDS 240: Data visualization in JavaScript (Follow-along version)](https://observablehq.com/@allisonhorst/eds-240-data-viz-2025) (you'll want to Tinker with or fork this version if you want to follow along with Allison's instruction)
+- [EDS 240: Data visualization in JavaScript (Follow-along version)](https://observablehq.com/@allisonhorst/eds-240-data-viz-2025){target="_blank"} (you'll want to Tinker with or fork this version if you want to follow along with Allison's instruction)
+- [EDS 240: Data visualization in JavaScript (KEY)](https://observablehq.com/@observablehq/eds-240-javascript-data-viz){target="_blank"} (includes all code demoed during class)
 
 ### Additional resources
 
-- [Add JavaScript to your dataviz toolkit with Observable Plot: Learner Version](https://observablehq.com/@observablehq/r-ladies-observable-plot-feb-2023-learner-version), by Allison Horst & Ananya Roy -- materials from R-Ladies Santa Barbara meetup (2023-05-24)
-- [Intro to Observable Plot: Exploring Taylor Swift Songs with Observable Plot](https://github.com/tashapiro/intro-observable?tab=readme-ov-file), by Tanya Shapiro -- materials from R-Ladies Philly workshop (2023-11-09)
+- [Add JavaScript to your dataviz toolkit with Observable Plot: Learner Version](https://observablehq.com/@observablehq/r-ladies-observable-plot-feb-2023-learner-version){target="_blank"}, by Allison Horst & Ananya Roy -- materials from R-Ladies Santa Barbara meetup (2023-05-24)
+- [Intro to Observable Plot: Exploring Taylor Swift Songs with Observable Plot](https://github.com/tashapiro/intro-observable?tab=readme-ov-file){target="_blank"}, by Tanya Shapiro -- materials from R-Ladies Philly workshop (2023-11-09)
+- [Observable's D3 Gallery](https://observablehq.com/@d3/gallery){target="_blank"} -- more than 170 cool viz built with D3 (plus their code)
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
 Similar to last week's discussion, we'll be discussing progress on our data visualizations and providing constructive feedback to one another.  
