--- a/course-materials/week8.qmd
+++ b/course-materials/week8.qmd
@@ -42,6 +42,7 @@ There's no required prep for this week's lecture!
 - [Add JavaScript to your dataviz toolkit with Observable Plot: Learner Version](https://observablehq.com/@observablehq/r-ladies-observable-plot-feb-2023-learner-version){target="_blank"}, by Allison Horst & Ananya Roy -- materials from R-Ladies Santa Barbara meetup (2023-05-24)
 - [Intro to Observable Plot: Exploring Taylor Swift Songs with Observable Plot](https://github.com/tashapiro/intro-observable?tab=readme-ov-file){target="_blank"}, by Tanya Shapiro -- materials from R-Ladies Philly workshop (2023-11-09)
 - [Observable's D3 Gallery](https://observablehq.com/@d3/gallery){target="_blank"} -- more than 170 cool viz built with D3 (plus their code)
+- [1974…bird attacks?](){target="_blank"}, by Allison Horst -- a blog post that demos a whole bunch of cool skills, but perhaps most relevantly, data wrangling in R then data viz using Observable Plot (and how to do so in Quarto doc `{ojs}` cells)
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
 Similar to last week's discussion, we'll be discussing progress on our data visualizations and providing constructive feedback to one another.  
